# curly-guacamole

./: .gitignore  pyproject.toml
src/: fusion-generator-humanized.py  jazz-rock-fusion-midi-generator.py
