[tool.poetry]
name = "jazz-rock-fusion-generator"
version = "0.1.0"
description = "A short description of my project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "jazz-rock-fusion-generator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
mido = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

